[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-regime"
version = "0.2.0"
description = "Historical market data service and HMM-based regime detection for options trading"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "yfinance>=0.2",
    "pyarrow>=14.0",
    "requests>=2.31",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
tastytrade = ["tastytrade-sdk"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
regime-explore = "market_regime.cli.explore:main"
regime-plot = "market_regime.cli.plot:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit real network APIs",
]
